--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@ button {
 
 footer {
     text-align: center;
-    margin-top: 50%;
+    margin-top: 100%;
 }
 
 p {
@@ -87,8 +87,29 @@ a {
     top: -5%;
 }
 
-img {
+.img-logo {
     width: 1.5em;
+}
+
+.weather {
+
+    text-align: center;
+
+}
+
+.weather img {
+    width: 9.5em;
+}
+
+.weather h1 {
+    color: rgba(27, 126, 27, 0.856);
+    font-size: 1.5em;
+}
+
+.weather p {
+
+    font-size: 1.1em;
+    margin-bottom: 20px;
 }
 
 @media (max-width: 575px) {
