--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,7 +1,7 @@
 <%- include ('header') -%>
       <div class="logo">
         <a href="/">
-           <img src="images/justfidel2.svg" alt="logo">
+           <img class="img-logo" src="images/justfidel2.svg" alt="logo">
           <p>Weather-App
         </a></p> 
        
@@ -11,7 +11,7 @@
 
             <form action="/" method="post">
                 <label for="cityInput">Enter City Name</label>
-                <input type="text" name="<%- cityName -%>" id="cityInput" placeholder="E.g Lagos">
+                <input type="text" name="cityName" id="cityInput" placeholder="E.g Lagos">
                 <button type="submit">Go</button>
             </form>  
 
