--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -1,18 +1,12 @@
 <%- include ('header') -%>
 
 
-  <div class="weather">
-    <p>The weather is currently <%- weatherDes -%> </p>
+  <div class="weather container">
+    <p>The weather is currently <%- weatherDesc -%> </p>
 
-    <h1>The Temparature in <%- cityName -%> <%- weatherTemp -%></h1>
+    <h1>The Temparature in <%- cityName -%> is <%- weatherTemp -%> Degree Celcius.</h1>
     <img src="<%- imgUrl -%>" alt="">
   </div>
-
-
-
-
-
-
 
 
 <%- include ('footer') -%>
