--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -4,9 +4,8 @@
   <div class="weather container">
     <p>The weather is currently <%- weatherDesc -%> </p>
 
-    <h1>The Temparature in <%- cityName -%> is <%- weatherTemp -%> Degree Celcius.</h1>
+    <h1>The Temparature in <%- cityName -%> is <%- weatherTemp -%>&#8451.</h1>
     <img src="<%- imgUrl -%>" alt="">
-  </div>
-
+  
 
 <%- include ('footer') -%>
