--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+    <!-- Pull to refresh -->
+    <link rel="stylesheet" href="stylesheets/xpull.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="javascripts/xpull.js"></script>
     
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
